# daily-note

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  README.md  SUBTASK_4_1_SUMMARY.md  SUBTASK_4_2_SUMMARY.md  VERIFICATION_SUBTASK_4_1.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  verify-rename-workflow.sh
.claude/: settings.local.json
backend/: .env  .env.example  .env.production  FIX.md  VERIFICATION_REPORT.md  add-startup.ps1  install-startup.bat  package.json  start.bat  start.sh  tsconfig.json  uninstall-startup.bat  verify-auto-analysis.ts
backend/prisma/: deduplicate-summary.ts  migrate-distribute-notes.ts  migrate-periodKey.ts  migrate-reset-today.ts  schema.prisma  seed-january.ts  seed-prompts.ts  seed.ts
backend/src/: index.ts  start.ts
backend/tests/: ERROR_MESSAGE_MANUAL.md  (+17 more)
data/: .gitkeep
docs/: DEPLOYMENT.md  ai-analysis-backend.md  api.md  implementation-summary.md  phase1-README.md  phase1-acceptance-checklist.md  phase1-completion-summary.md  phase1-testing-guide.md  setup.md  summary-analysis.md  summary-enhancement-plan.md  workflow-editor.md
frontend/: .env.local  E2E_VERIFICATION_SUMMARY_HISTORY.md  package.json  tailwind.config.js  tailwind.config.ts  tsc_all_errors.txt  tsc_output.txt  tsconfig.json  tsconfig.tsbuildinfo
scripts/: build-debug.bat  build-release.bat  make-icon.js
shared/: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+145 files in other folders)
